--- a/tennis/index.html
+++ b/tennis/index.html
@@ -32,7 +32,7 @@
             <nav>
                 
                 <ul>
-                    <li><a href="boka.html">Boka id</a></li>
+                    <li><a href="boka.html">Boka tid</a></li>
                     <li><a href="banor.html">Banor</a></li>
                     <li><a href="omkl.html">Omklädningsrum</a></li>
                     <li><a href="bastu.html">Bastu</a></li>
