--- a/tennis/index.html
+++ b/tennis/index.html
@@ -55,8 +55,16 @@
             <p>Här kan du se våra faciliteter</p>
         </div>
 
+        <div class="content" id="myBookings">
+            <img class="closeoverlay" src="resources/images/closeblack.png" id="closeMyBookings" onclick="closeMybookings()">
+            <h1>Mina bokningar</h1>
+            <div id =myBookingsList></div>
+            
+        </div>
+
         <div class="content" id="contact">
             <h1>Kontakt</h1>
+            
             <p>Här kan du kontakta oss</p>
         </div>
     </section>
@@ -69,6 +77,7 @@
                 <li><a id="menuCourts">Banor</a></li>
                 <li><a id="menuFacilities">Faciliteter</a></li>
                 <li><a id="menuContact">Kontakt</a></li>
+                <li><a id="menuMyBookings" onclick="openMyBookings()">Mina bokningar</a></li>
                 <li><a id="loginbtn" onclick="loginButton()">Logga in</a></li>
             </ul>
         </nav>
