--- a/tennis/index.html
+++ b/tennis/index.html
@@ -39,11 +39,11 @@
                 <input type="date" id="date" > <br>
                 <label>Bana (1-4)</label>
                 <input type="number" id="court"> <br>
-                <button type="submit" id="showTimes" onclick="updateList()">Visa tider</button>
-                <div class="time-container" id="timeContainer">
-
-                </div>
+                <button id="showTimes" >Visa tider</button>
+                <div class="time-container" id="timeContainer"></div>
             </form>
+            
+
         </div>
         <!-- Courts -->
         <div class="content" id="courts">
